<resources>
    <string name="app_name">Goairtest</string>
    <string name="title">GOairLight</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="test">Test Refresh</string>
    <string name="dbLink">Cloud database</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="reset_data">Reset data</string>
    <string name="changepass">Change password</string>
    <string name="about_us">About us</string>
    <string name="reset_password">Reset password</string>
    <string name="send_recovery_e_mail">Send recovery e-mail</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Sign In</string>
    <string name="do_you_really_want_to_delete_your_account_n_confirm_with_password">Do you really want to delete your account? \n Confirm with password</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
</resources>
