<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation.xml"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.goairtest.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.goairtest.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/map"
        />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.goairtest.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings" />

</navigation>