<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="406dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:background="@color/green"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/resetData"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:background="@color/lightgray"
            android:text="@string/reset_data"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@color/lightgray"
            android:text="@string/changepass"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/dbLink"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:autoLink="all"
            android:background="@color/lightgray"
            android:text="@string/dbLink"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/lightgray"
            android:text="@string/about_us"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:background="@color/lightgray"
            android:text="@string/version_1_0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>